Employee Hot Fix

--- a/Employee.html
+++ b/Employee.html
@@ -12,8 +12,8 @@ navigation bar
 <nav id="nav-bar">
     <div>
         <!-- navigation bar page hyper links-->
-        <a href="Page1.html">EMPLOYEE</a>
-        <a href="Page2.html">EMPLOYEE JOB INFORMATION</a>
+        <a href="Employee.html">EMPLOYEE</a>
+        <a href="Job_Title.html">EMPLOYEE JOB INFORMATION</a>
         <a href="Page3.html">DEPARTMENTS</a>
         <a href="Page4.html">MANAGERS</a>
         <a href="Page5.html">EMPLOYEE SALARY</a>
@@ -34,7 +34,7 @@ employee table
 <table class="center" data-record-type="Employees">
     <thead>
     <tr>
-        <th rowspan="2">Employee_ID<br><img class="img-center" src="img/primary_key.png" alt="Primary-key"></th>
+        <th rowspan="2">Employee ID<br><img class="img-center" src="img/primary_key.png" alt="Employee_Primary_Key"></th>
         <th colspan="2">Employee Name</th>
         <th rowspan="2">Employee Gender</th>
         <th rowspan="2">Employee Date of Birth</th>
@@ -44,8 +44,8 @@ employee table
         <th rowspan="2">Employee Status</th>
     </tr>
     <tr class="clear-background">
-        <th class="clear-background">First Name</th>
-        <th class="clear-background">Last Name</th>
+        <th>First Name</th>
+        <th>Last Name</th>
     </tr>
     </thead>
     <tbody>
