--- a/job_title.html
+++ b/job_title.html
@@ -12,25 +12,22 @@ navigation bar
 <nav id="nav-bar">
     <div>
         <!-- navigation bar page hyper links-->
-        <a href="Employee.html">EMPLOYEE</a>
-        <a href="Job_Title.html">JOB TITLE</a>
-        <a href="Page3.html">DEPARTMENTS</a>
-        <a href="Page4.html">MANAGERS</a>
-        <a href="Page5.html">EMPLOYEE SALARY</a>
+        <a href="employee.html">EMPLOYEE</a>
+        <a href="job_title.html">JOB TITLE</a>
+        <a href="salary.html">SALARY</a>
+        <a href="salary_history.html">SALARY HISTORY</a>
+        <a href="department.html">DEPARTMENT</a>
+        <a href="employee_department.html">EMPLOYEE DEPATRMENT</a>
+        <a href="department_manager.html">DEPARTMENT MANAGER</a>
+        <a href="department_manager_history.html">DEPARTMENT MANAGER HISTORY</a>
     </div>
 </nav>
-<!--
-Table header outside of table.
--->
-
-<header>
-    <h1>JOB TITLE TABLE</h1>
-</header>
 
 <!--
 Job Title Table
 -->
 <table class="center" data-record-type="Job_Title">
+    <caption>JOB TITLE TABLE</caption><!--Table header outside of table.-->
     <thead>
     <tr>
         <th>Job Title ID<br><img class="img-center" src="img/primary_key.png" alt="Job_Title_Primary_Key"></th>
