Completion of Project

--- a/department.html
+++ b/department.html
@@ -21,39 +21,47 @@ navigation bar
         <a href="department_manager.html">DEPARTMENT MANAGER</a>
         <a href="department_manager_history.html">DEPARTMENT MANAGER HISTORY</a>
     </div>
-</nav>
+</nav><!--Navbar End-->
 
-<table class="center" data-record-type="Department">
-    <caption>DEPARTMENT TABLE</caption><!--Table header outside of table.-->
-    <thead>
-    <tr>
-        <th>Department ID<br><span class="datatype">(int)</span><br><img class="img-center" src="img/primary_key.png" alt="Department_Primary_Key"></th>
-        <th>Department Name<br><span class="datatype">(char)</span></th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-        <td>1</td>
-        <td>Infrastructure</td>
-    </tr>
-    <tr>
-        <td>2</td>
-        <td>Design</td>
-    </tr>
-    <tr>
-        <td>3</td>
-        <td>Statics</td>
-    </tr>
-    <tr>
-        <td>4</td>
-        <td>Accounting</td>
-    </tr>
-    <tr>
-        <td>5</td>
-        <td>Support Staff</td>
-    </tr>
-    </tbody>
 
-</table>
+<main>
+    <!-- Department Table -->
+    <table class="center" data-record-type="Department">
+        <caption>DEPARTMENT TABLE</caption><!--Table header outside of table.-->
+        <!--Table Head-->
+        <thead>
+        <tr>
+            <th>Department ID<br><span class="datatype">(int)</span><br><img class="img-center"
+                                                                             src="img/primary_key.png"
+                                                                             alt="Department_Primary_Key"></th>
+            <th>Department Name<br><span class="datatype">(char)</span></th>
+        </tr>
+        </thead><!--Table Head End-->
+        <!--Table Body-->
+        <tbody>
+        <tr>
+            <td>1</td>
+            <td>Infrastructure</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>Design</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>Statics</td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>Accounting</td>
+        </tr>
+        <tr>
+            <td>5</td>
+            <td>Support Staff</td>
+        </tr>
+        </tbody><!--Table Body End-->
+
+    </table><!--Department Table End-->
+</main>
 </body>
 </html>
