--- a/employee_department.html
+++ b/employee_department.html
@@ -21,79 +21,82 @@ navigation bar
         <a href="department_manager.html">DEPARTMENT MANAGER</a>
         <a href="department_manager_history.html">DEPARTMENT MANAGER HISTORY</a>
     </div>
-</nav>
-<!--
-Table header outside of table.
--->
+</nav><!--Navbar End-->
 
-<header>
-    <h1>EMPLOYEE DEPARTMENT TABLE</h1>
-</header>
-<table class="center" data-record-type="Employee_Department">
-    <thead>
-    <tr>
-        <th>Department ID<br><span class="datatype">(int)</span><br><img class="img-center" src="img/foreign_key.png" alt="Department_Foreign_Key"></th>
-        <th>Employee ID<br><span class="datatype">(int)</span><br><img class="img-center" src="img/foreign_key.png" alt="Employee_Foreign_Key"></th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-        <td>1</td>
-        <td>2</td>
-    </tr>
-    <tr>
-        <td>2</td>
-        <td>2</td>
-    </tr>
-    <tr>
-        <td>2</td>
-        <td>1</td>
-    </tr>
-    <tr>
-        <td>5</td>
-        <td>3</td>
-    </tr>
-    <tr>
-        <td>2</td>
-        <td>4</td>
-    </tr>
-    <tr>
-        <td>1</td>
-        <td>5</td>
-    </tr>
-    <tr>
-        <td>2</td>
-        <td>5</td>
-    </tr>
-    <tr>
-        <td>3</td>
-        <td>6</td>
-    </tr>
-    <tr>
-        <td>2</td>
-        <td>6</td>
-    </tr>
-    <tr>
-        <td>3</td>
-        <td>7</td>
-    </tr>
-    <tr>
-        <td>4</td>
-        <td>8</td>
-    </tr>
-    <tr>
-        <td>5</td>
-        <td>9</td>
-    </tr>
-    <tr>
-        <td>1</td>
-        <td>10</td>
-    </tr>
-    <tr>
-        <td>2</td>
-        <td>10</td>
-    </tr>
-    </tbody>
-</table>
+<main>
+    <!--Employee Department Table-->
+    <table class="center" data-record-type="Employee_Department">
+        <caption>EMPLOYEE DEPARTMENT TABLE</caption><!--Table header outside of table.-->
+        <!--Table head-->
+        <thead>
+        <tr>
+            <th>Department ID<br><span class="datatype">(int)</span><br><img class="img-center"
+                                                                             src="img/foreign_key.png"
+                                                                             alt="Department_Foreign_Key"></th>
+            <th>Employee ID<br><span class="datatype">(int)</span><br><img class="img-center" src="img/foreign_key.png"
+                                                                           alt="Employee_Foreign_Key"></th>
+        </tr>
+        </thead>  <!--Table head end-->
+        <!--Table Body-->
+        <tbody>
+        <tr>
+            <td>1</td>
+            <td>2</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>2</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>1</td>
+        </tr>
+        <tr>
+            <td>5</td>
+            <td>3</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>4</td>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>5</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>5</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>6</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>6</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>7</td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>8</td>
+        </tr>
+        <tr>
+            <td>5</td>
+            <td>9</td>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>10</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>10</td>
+        </tr>
+        </tbody><!--Table Body End-->
+    </table>
+</main>
 </body>
 </html>
