--- a/department_manager.html
+++ b/department_manager.html
@@ -22,38 +22,41 @@ navigation bar
         <a href="department_manager_history.html">DEPARTMENT MANAGER HISTORY</a>
     </div>
 </nav><!--Navbar End-->
-<!--
-Table header outside of table.
--->
 
-<table class="center" data-record-type="Department_Manager">
-    <caption>DEPARTMENT MANAGER</caption>
-    <!--Table head-->
-    <thead>
-    <tr>
-        <th>Department ID<br><span class="datatype">(int)</span><br><img class="img-center" src="img/foreign_key.png" alt="Department_Foreign_Key"></th>
-        <th>Employee ID<br><span class="datatype">(int)</span><br><img class="img-center" src="img/foreign_key.png" alt="Employee_Foreign_Key"></th>
-    </tr>
-    </thead>  <!--Table head end-->
-    <!--Table Body-->
-    <tbody>
-    <tr>
-        <td>3</td>
-        <td>5</td>
-    </tr>
-    <tr>
-        <td>2</td>
-        <td>6</td>
-    </tr>
-    <tr>
-        <td>4</td>
-        <td>8</td>
-    </tr>
-    <tr>
-        <td>2</td>
-        <td>10</td>
-    </tr>
-    </tbody><!-- Table Body End -->
-</table><!-- Department Manager Table End -->
+<main>
+    <!-- Department Manager Table-->
+    <table class="center" data-record-type="Department_Manager">
+        <caption>DEPARTMENT MANAGER</caption><!--Table header outside of table-->
+        <!--Table head-->
+        <thead>
+        <tr>
+            <th>Department ID<br><span class="datatype">(int)</span><br><img class="img-center"
+                                                                             src="img/foreign_key.png"
+                                                                             alt="Department_Foreign_Key"></th>
+            <th>Employee ID<br><span class="datatype">(int)</span><br><img class="img-center" src="img/foreign_key.png"
+                                                                           alt="Employee_Foreign_Key"></th>
+        </tr>
+        </thead>  <!--Table head end-->
+        <!--Table Body-->
+        <tbody>
+        <tr>
+            <td>3</td>
+            <td>5</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>6</td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>8</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>10</td>
+        </tr>
+        </tbody><!-- Table Body End -->
+    </table><!-- Department Manager Table End -->
+</main>
 </body>
 </html>
