--- a/employee.html
+++ b/employee.html
@@ -21,143 +21,150 @@ navigation bar
         <a href="department_manager.html">DEPARTMENT MANAGER</a>
         <a href="department_manager_history.html">DEPARTMENT MANAGER HISTORY</a>
     </div>
-</nav>
+</nav><!--Navbar End-->
 
-<!--
-employee table
--->
 
-<table class="center" data-record-type="Employees">
-    <caption>EMPLOYEE TABLE</caption><!--Table header outside of table.-->
-    <thead>
-    <tr>
-        <th rowspan="2">Employee ID<br><span class="datatype">(int)</span><br><img class="img-center" src="img/primary_key.png" alt="Employee_Primary_Key"></th>
-        <th colspan="2">Employee Name<br><span class="datatype">(char)</span></th>
-        <th rowspan="2">Employee Gender<br><span class="datatype">(char)</span></th>
-        <th rowspan="2">Employee Date of Birth<br><span class="datatype">(datetime)</span></th>
-        <th rowspan="2">Employee Hire Date<br><span class="datatype">(datetime)</span></th>
-        <th rowspan="2">Employee Salary<br><span class="datatype">(int)</span><br><img class="img-center" src="img/foreign_key.png" alt="Foreign-key"></th>
-        <th rowspan="2">Job Title<br><span class="datatype">(int)</span><br><img class="img-center" src="img/foreign_key.png" alt="Foreign-key"></th>
-        <th rowspan="2">Employee Status<br><span class="datatype">(boolean)</span></th>
-    </tr>
-    <tr>
-        <th>First Name</th>
-        <th>Last Name</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-        <td>1</td>
-        <td>Hasan</td>
-        <td>Eren</td>
-        <td>Male</td>
-        <td>01-05-1996</td>
-        <td>02-12-2021</td>
-        <td>1</td>
-        <td>4</td>
-        <td>Active</td>
-    </tr>
-    <tr>
-        <td>2</td>
-        <td>Micheal</td>
-        <td>Slovski</td>
-        <td>Male</td>
-        <td>23-08-1992</td>
-        <td>12-10-2018</td>
-        <td>2</td>
-        <td>2</td>
-        <td>Active</td>
-    </tr>
-    <tr>
-        <td>3</td>
-        <td>Aylin</td>
-        <td>Ozdemir</td>
-        <td>Female</td>
-        <td>20-10-1998</td>
-        <td>08-10-2022</td>
-        <td>3</td>
-        <td>3</td>
-        <td>Active</td>
-    </tr>
-    <tr>
-        <td>4</td>
-        <td>Mike</td>
-        <td>Tidus</td>
-        <td>Male</td>
-        <td>18-05-1995</td>
-        <td>02-12-2021</td>
-        <td>4</td>
-        <td>5</td>
-        <td>Active</td>
-    </tr>
-    <tr>
-        <td>5</td>
-        <td>Hasan</td>
-        <td>Cagri</td>
-        <td>Male</td>
-        <td>29-05-1993</td>
-        <td>02-01-2001</td>
-        <td>5</td>
-        <td>1</td>
-        <td>Active</td>
-    </tr>
-    <tr>
-        <td>6</td>
-        <td>Siti</td>
-        <td>Malek</td>
-        <td>Female</td>
-        <td>30-12-1980</td>
-        <td>30-01-2016</td>
-        <td>6</td>
-        <td>1</td>
-        <td>Active</td>
-    </tr>
-    <tr>
-        <td>7</td>
-        <td>Tara</td>
-        <td>Nicarelmen</td>
-        <td>Female</td>
-        <td>14-02-2001</td>
-        <td>02-12-2020</td>
-        <td>7</td>
-        <td>5</td>
-        <td>Active</td>
-    </tr>
-    <tr>
-        <td>8</td>
-        <td>James</td>
-        <td>Coors</td>
-        <td>Male</td>
-        <td>01-05-1996</td>
-        <td>02-04-2019</td>
-        <td>8</td>
-        <td>1</td>
-        <td>Active</td>
-    </tr>
-    <tr>
-        <td>9</td>
-        <td>Jenny</td>
-        <td>Frank</td>
-        <td>Female</td>
-        <td>23-05-2002</td>
-        <td>23-01-2022</td>
-        <td>9</td>
-        <td>6</td>
-        <td>Active</td>
-    </tr>
-    <tr>
-        <td>10</td>
-        <td>David</td>
-        <td>Horner</td>
-        <td>Male</td>
-        <td>01-09-1975</td>
-        <td>02-12-2005</td>
-        <td>10</td>
-        <td>1</td>
-        <td>Active</td>
-    </tr>
-    </tbody>
-</table>
-
+<main>
+    <!--employee table-->
+    <table class="center" data-record-type="Employees">
+        <caption>EMPLOYEE TABLE</caption><!--Table header outside of table.-->
+        <!--Table Head-->
+        <thead>
+        <tr>
+            <th rowspan="2">Employee ID<br><span class="datatype">(int)</span><br><img class="img-center"
+                                                                                       src="img/primary_key.png"
+                                                                                       alt="Employee_Primary_Key"></th>
+            <th colspan="2">Employee Name<br><span class="datatype">(char)</span></th>
+            <th rowspan="2">Employee Gender<br><span class="datatype">(char)</span></th>
+            <th rowspan="2">Employee Date of Birth<br><span class="datatype">(datetime)</span></th>
+            <th rowspan="2">Employee Hire Date<br><span class="datatype">(datetime)</span></th>
+            <th rowspan="2">Employee Salary<br><span class="datatype">(int)</span><br><img class="img-center"
+                                                                                           src="img/foreign_key.png"
+                                                                                           alt="Foreign-key"></th>
+            <th rowspan="2">Job Title<br><span class="datatype">(int)</span><br><img class="img-center"
+                                                                                     src="img/foreign_key.png"
+                                                                                     alt="Foreign-key"></th>
+            <th rowspan="2">Employee Status<br><span class="datatype">(boolean)</span></th>
+        </tr>
+        <tr>
+            <th>First Name</th>
+            <th>Last Name</th>
+        </tr>
+        </thead><!--Table Head End-->
+        <!--Table Body-->
+        <tbody>
+        <tr>
+            <td>1</td>
+            <td>Hasan</td>
+            <td>Eren</td>
+            <td>Male</td>
+            <td>01-05-1996</td>
+            <td>02-12-2021</td>
+            <td>1</td>
+            <td>4</td>
+            <td>Active</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>Micheal</td>
+            <td>Slovski</td>
+            <td>Male</td>
+            <td>23-08-1992</td>
+            <td>12-10-2018</td>
+            <td>2</td>
+            <td>2</td>
+            <td>Active</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>Aylin</td>
+            <td>Ozdemir</td>
+            <td>Female</td>
+            <td>20-10-1998</td>
+            <td>08-10-2022</td>
+            <td>3</td>
+            <td>3</td>
+            <td>Active</td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>Mike</td>
+            <td>Tidus</td>
+            <td>Male</td>
+            <td>18-05-1995</td>
+            <td>02-12-2021</td>
+            <td>4</td>
+            <td>5</td>
+            <td>Active</td>
+        </tr>
+        <tr>
+            <td>5</td>
+            <td>Hasan</td>
+            <td>Cagri</td>
+            <td>Male</td>
+            <td>29-05-1993</td>
+            <td>02-01-2001</td>
+            <td>5</td>
+            <td>1</td>
+            <td>Active</td>
+        </tr>
+        <tr>
+            <td>6</td>
+            <td>Siti</td>
+            <td>Malek</td>
+            <td>Female</td>
+            <td>30-12-1980</td>
+            <td>30-01-2016</td>
+            <td>6</td>
+            <td>1</td>
+            <td>Active</td>
+        </tr>
+        <tr>
+            <td>7</td>
+            <td>Tara</td>
+            <td>Nicarelmen</td>
+            <td>Female</td>
+            <td>14-02-2001</td>
+            <td>02-12-2020</td>
+            <td>7</td>
+            <td>5</td>
+            <td>Active</td>
+        </tr>
+        <tr>
+            <td>8</td>
+            <td>James</td>
+            <td>Coors</td>
+            <td>Male</td>
+            <td>01-05-1996</td>
+            <td>02-04-2019</td>
+            <td>8</td>
+            <td>1</td>
+            <td>Active</td>
+        </tr>
+        <tr>
+            <td>9</td>
+            <td>Jenny</td>
+            <td>Frank</td>
+            <td>Female</td>
+            <td>23-05-2002</td>
+            <td>23-01-2022</td>
+            <td>9</td>
+            <td>6</td>
+            <td>Active</td>
+        </tr>
+        <tr>
+            <td>10</td>
+            <td>David</td>
+            <td>Horner</td>
+            <td>Male</td>
+            <td>01-09-1975</td>
+            <td>02-12-2005</td>
+            <td>10</td>
+            <td>1</td>
+            <td>Active</td>
+        </tr>
+        </tbody><!--Table Body End-->
+    </table><!--Employee Table End-->
+</main>
 </body>
 </html>
