--- a/job_title.html
+++ b/job_title.html
@@ -21,46 +21,49 @@ navigation bar
         <a href="department_manager.html">DEPARTMENT MANAGER</a>
         <a href="department_manager_history.html">DEPARTMENT MANAGER HISTORY</a>
     </div>
-</nav>
+</nav><!--Navbar End-->
 
-<!--
-Job Title Table
--->
-<table class="center" data-record-type="Job_Title">
-    <caption>JOB TITLE TABLE</caption><!--Table header outside of table.-->
-    <thead>
-    <tr>
-        <th>Job Title ID<br><img class="img-center" src="img/primary_key.png" alt="Job_Title_Primary_Key"></th>
-        <th>Job Title Name</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-        <td>1</td>
-        <td>Manager</td>
-    </tr>
-    <tr>
-        <td>2</td>
-        <td>Accountant</td>
-    </tr>
-    <tr>
-        <td>3</td>
-        <td>Cleaner</td>
-    </tr>
-    <tr>
-        <td>4</td>
-        <td>Design Engineer</td>
-    </tr>
-    <tr>
-        <td>5</td>
-        <td>Control Engineer</td>
-    </tr>
-    <tr>
-        <td>6</td>
-        <td>Technician</td>
-    </tr>
-    </tbody>
-</table>
 
+<main>
+    <!--Job Title Table-->
+    <table class="center" data-record-type="Job_Title">
+        <caption>JOB TITLE TABLE</caption><!--Table header outside of table.-->
+        <!--Table Head-->
+        <thead>
+        <tr>
+            <th>Job Title ID<br><span class="datatype">(int)</span><img class="img-center" src="img/primary_key.png"
+                                                                        alt="Job_Title_Primary_Key"></th>
+            <th>Job Title Name<br><span class="datatype">(char)</span></th>
+        </tr>
+        </thead><!--Table Head End-->
+        <!--Table Body-->
+        <tbody>
+        <tr>
+            <td>1</td>
+            <td>Manager</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>Accountant</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>Cleaner</td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>Design Engineer</td>
+        </tr>
+        <tr>
+            <td>5</td>
+            <td>Control Engineer</td>
+        </tr>
+        <tr>
+            <td>6</td>
+            <td>Technician</td>
+        </tr>
+        </tbody><!--Table Body End-->
+    </table><!--Job Title Table End-->
+</main>
 </body>
 </html>
