--- a/salary.html
+++ b/salary.html
@@ -21,61 +21,64 @@ navigation bar
         <a href="department_manager.html">DEPARTMENT MANAGER</a>
         <a href="department_manager_history.html">DEPARTMENT MANAGER HISTORY</a>
     </div>
-</nav>
-<!--
-Table header outside of table.
--->
+</nav><!--Navbar End-->
 
-<table class="center" data-record-type="Salary">
-    <caption>SALARY TABLE</caption>
-    <thead>
-    <tr>
-        <th>Salary ID<br><span class="datatype">(int)</span><br><img class="img-center" src="img/primary_key.png" alt="Salary_Primary_Key"></th>
-        <th>Salary<br><span class="datatype">(dec)</span></th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr>
-        <td>1</td>
-        <td>2300.00</td>
-    </tr>
-    <tr>
-        <td>2</td>
-        <td>2800.00</td>
-    </tr>
-    <tr>
-        <td>3</td>
-        <td>2100.00</td>
-    </tr>
-    <tr>
-        <td>4</td>
-        <td>2300.00</td>
-    </tr>
-    <tr>
-        <td>5</td>
-        <td>4650.00</td>
-    </tr>
-    <tr>
-        <td>6</td>
-        <td>4250.00</td>
-    </tr>
-    <tr>
-        <td>7</td>
-        <td>2400.00</td>
-    </tr>
-    <tr>
-        <td>8</td>
-        <td>2750.00</td>
-    </tr>
-    <tr>
-        <td>9</td>
-        <td>2150.00</td>
-    </tr>
-    <tr>
-        <td>10</td>
-        <td>5250.00</td>
-    </tr>
-    </tbody>
-</table>
+<main>
+    <!--Salary Table-->
+    <table class="center" data-record-type="Salary">
+        <caption>SALARY TABLE</caption><!--Table header outside of table-->
+        <!--Table Head-->
+        <thead>
+        <tr>
+            <th>Salary ID<br><span class="datatype">(int)</span><br><img class="img-center" src="img/primary_key.png"
+                                                                         alt="Salary_Primary_Key"></th>
+            <th>Salary<br><span class="datatype">(dec)</span></th>
+        </tr>
+        </thead><!--Table Head End-->
+        <!--Table Body-->
+        <tbody>
+        <tr>
+            <td>1</td>
+            <td>2300.00</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>2800.00</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>2100.00</td>
+        </tr>
+        <tr>
+            <td>4</td>
+            <td>2300.00</td>
+        </tr>
+        <tr>
+            <td>5</td>
+            <td>4650.00</td>
+        </tr>
+        <tr>
+            <td>6</td>
+            <td>4250.00</td>
+        </tr>
+        <tr>
+            <td>7</td>
+            <td>2400.00</td>
+        </tr>
+        <tr>
+            <td>8</td>
+            <td>2750.00</td>
+        </tr>
+        <tr>
+            <td>9</td>
+            <td>2150.00</td>
+        </tr>
+        <tr>
+            <td>10</td>
+            <td>5250.00</td>
+        </tr>
+        </tbody><!--Table Body End-->
+    </table><!--Salary Table End-->
+</main>
 </body>
 </html>
